Applied hexagonal architecture